# terragen4

./: CMakeLists.txt
res/scenes/: legacy_default.yaml  mountain_valley.yaml
res/shaders/: fragment.frag  hud.vert  terrain_field.glsl  terrain_hermite.comp  terrain_mesh.comp  terrain_sample.comp  vertex.vert
res/textures/: SOURCES.txt
scripts/: fetch_textures.sh
src/main/: chunk_cache.c  chunk_cache.h  chunk_coord.c  chunk_coord.h  gpu_shader.c  gpu_shader.h  gpu_texture.c  gpu_texture.h  main.c  materials.c  materials.h  sparse_grid.c  sparse_grid.h  stb_image_impl.c  terrain_config.c  terrain_config.h  terrain_cpu_reference.c  terrain_cpu_reference.h  terrain_gpu.c  terrain_gpu.h  terrain_scene.c  terrain_scene.h
src/test/: chunk_cache_tests.c  chunk_coord_tests.c  terrain_cpu_tests.c  terrain_scene_tests.c
